--- a/TabularModel.ipynb
+++ b/TabularModel.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TabularModel.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKxhZqHlofzDfaZgSMZ2dU",
+      "authorship_tag": "ABX9TyPOmxAb7hGeyU56AGsC9dt5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,20 +34,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rzXczdsF9n6q",
-        "outputId": "5ec67c36-a628-4c98-cfdd-a5e86e765aaf"
+        "outputId": "f04551cc-5ce9-4515-b13e-4c3714bc9a54"
       },
       "source": [
         "!pip -q install torchxrayvision\n",
         "!pip -q install image_tabular"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[K     |████████████████████████████████| 29.0 MB 13 kB/s \n",
-            "\u001b[K     |████████████████████████████████| 2.0 MB 51.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.0 MB 61.2 MB/s \n",
             "\u001b[?25h"
           ]
         }
@@ -83,7 +83,7 @@
         "from image_tabular.model import *\n",
         "from image_tabular.metric import *"
       ],
-      "execution_count": 15,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -93,12 +93,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XUkKzkBq9mtq",
-        "outputId": "7e17a9c1-1c44-45e8-f9d7-dbe3a9c893ca"
+        "outputId": "f0128205-4a7b-48a6-b6d8-91e046fd5630"
       },
       "source": [
-        "!git clone https://github.com/ieee8023/covid-chestxray-dataset"
+        "!git clone https://github.com/ieee8023/covid-chestxray-dataset\n",
+        "d = xrv.datasets.COVID19_Dataset(imgpath=\"covid-chestxray-dataset/images/\",csvpath=\"covid-chestxray-dataset/metadata.csv\")"
       ],
-      "execution_count": 4,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,11 +108,20 @@
             "Cloning into 'covid-chestxray-dataset'...\n",
             "remote: Enumerating objects: 3641, done.\u001b[K\n",
             "remote: Total 3641 (delta 0), reused 0 (delta 0), pack-reused 3641\u001b[K\n",
-            "Receiving objects: 100% (3641/3641), 632.96 MiB | 35.70 MiB/s, done.\n",
+            "Receiving objects: 100% (3641/3641), 632.96 MiB | 40.63 MiB/s, done.\n",
             "Resolving deltas: 100% (1450/1450), done.\n",
             "Checking out files: 100% (1174/1174), done.\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "phE8e_0-dZLC"
+      },
+      "source": [
+        "# **Tabular Data handling**"
       ]
     },
     {
@@ -120,12 +130,11 @@
         "id": "1km8Eh32-I-_"
       },
       "source": [
-        "d = xrv.datasets.COVID19_Dataset(imgpath=\"covid-chestxray-dataset/images/\",csvpath=\"covid-chestxray-dataset/metadata.csv\")\n",
         "metadata = d.csv\n",
         "filtered_metadata = metadata.loc[(metadata.view!=\"APS\") & (metadata.offset>=0) & (metadata.offset<=8) & (metadata.intubation_present != 'Y') & (metadata.in_icu != 'Y')]\n",
         "filtered_metadata = filtered_metadata[['index','patientid','sex','age','RT_PCR_positive','temperature','pO2_saturation', 'leukocyte_count', 'neutrophil_count', 'lymphocyte_count', 'survival', 'intubated', 'went_icu', 'needed_supplemental_O2','filename']]"
       ],
-      "execution_count": 8,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -136,7 +145,7 @@
       "source": [
         "data_path = Path(\"./covid-chestxray-dataset/\")"
       ],
-      "execution_count": 47,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -144,10 +153,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
+          "height": 261
         },
         "id": "nhyCvo0B-bBl",
-        "outputId": "1409dd73-1dba-4cdb-fdcb-90ba1035eb5d"
+        "outputId": "be62d92d-a6e9-4ddc-cc76-b7df2f29ad13"
       },
       "source": [
         "train_df, test_df = train_test_split(filtered_metadata, test_size=0.2)\n",
@@ -155,7 +164,7 @@
         "test_df = test_df.dropna(subset=['survival', 'intubated', 'went_icu', 'needed_supplemental_O2'], how='any')\n",
         "train_df.head()"
       ],
-      "execution_count": 73,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +312,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 43
         }
       ]
     },
@@ -322,7 +331,7 @@
         "dep_var = ['survival', 'intubated', 'went_icu', 'needed_supplemental_O2']\n",
         "procs = [FillMissing, Categorify, Normalize]"
       ],
-      "execution_count": 74,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -336,17 +345,13 @@
         "#add test - currently returns an error\n",
         "#tab_data.add_test(TabularList.from_df(test_df, cat_names=cat_names, cont_names=cont_names, processor=tab_data.train.x.processor))"
       ],
-      "execution_count": 85,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "H_RkugIyF4st",
-        "outputId": "e9ff3004-9196-4686-ea70-592c04d948bc"
+        "id": "H_RkugIyF4st"
       },
       "source": [
         "# embedding sizes of categorical data\n",
@@ -357,36 +362,203 @@
         "tabular_model = TabularModel(emb_szs, len(cont_names), out_sz=tab_out_sz, layers=[18], ps=0.2)\n",
         "tabular_model"
       ],
-      "execution_count": 88,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sTYIwRNueS6j"
+      },
+      "source": [
+        "# **Image Data handling**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SJQviipsfZpa"
+      },
+      "source": [
+        "def create_sub_image_folder(dataframe, imgs_type):\n",
+        "  filtered_imgpath = d.imgpath + '/' + imgs_type + '/'\n",
+        "  filtered_filenames = dataframe['filename']\n",
+        "  if not os.path.exists(filtered_imgpath):\n",
+        "      os.mkdir(filtered_imgpath)\n",
+        "  for file_name in filtered_filenames:\n",
+        "      src = d.imgpath + file_name\n",
+        "      dst = filtered_imgpath + file_name\n",
+        "      if not os.path.exists(dst):\n",
+        "          shutil.copyfile(src, dst)"
+      ],
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1RnuSTZhmMSy"
+      },
+      "source": [
+        "create_sub_image_folder(train_df, 'train')\n",
+        "create_sub_image_folder(test_df, 'test')\n",
+        "filtered_img_base_path = d.imgpath + '/'"
+      ],
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NTAGIkzMiYOr"
+      },
+      "source": [
+        "train_transforms = transforms.Compose([transforms.Grayscale(num_output_channels=1),\n",
+        "                                       transforms.RandomRotation(30),\n",
+        "                                       transforms.RandomResizedCrop(224),\n",
+        "                                       transforms.RandomHorizontalFlip(),\n",
+        "                                       transforms.ToTensor(),\n",
+        "                                       transforms.Normalize((0.5), (0.5))])\n",
+        "\n",
+        "test_transforms = transforms.Compose([transforms.Grayscale(num_output_channels=1),\n",
+        "                                     transforms.Resize(255),\n",
+        "                                     transforms.CenterCrop(224),\n",
+        "                                     transforms.ToTensor()])\n",
+        "\n",
+        "train_data = datasets.ImageFolder(filtered_img_base_path + '/train', transform=train_transforms)\n",
+        "test_data = datasets.ImageFolder(filtered_img_base_path + '/test', transform=test_transforms)\n",
+        "# train_data, val_data, test_data = split_data(data)\n",
+        "\n",
+        "trainloader = torch.utils.data.DataLoader(train_data, batch_size=64, shuffle=True)\n",
+        "testloader = torch.utils.data.DataLoader(test_data, batch_size=64)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fc_3VVwJpNXw",
+        "outputId": "0175b5fc-325c-4e6f-d4aa-93361154f830"
+      },
+      "source": [
+        "model = xrv.models.DenseNet(weights=\"densenet121-res224-all\")\n",
+        "model.classifier"
+      ],
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "TabularModel(\n",
-              "  (embeds): ModuleList(\n",
-              "    (0): Embedding(3, 3)\n",
-              "    (1): Embedding(2, 2)\n",
-              "    (2): Embedding(3, 3)\n",
-              "    (3): Embedding(3, 3)\n",
-              "    (4): Embedding(2, 2)\n",
-              "    (5): Embedding(2, 2)\n",
-              "    (6): Embedding(2, 2)\n",
+              "Linear(in_features=1024, out_features=18, bias=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5lQfXGarpQgN"
+      },
+      "source": [
+        "# Don't backprop model parameters!\n",
+        "for param in model.parameters():\n",
+        "    param.requires_grad = False\n",
+        "    \n",
+        "# New classifier\n",
+        "model.classifier = nn.Sequential(nn.Linear(1024, 512),\n",
+        "                          nn.ReLU(),\n",
+        "                          nn.Dropout(0.2),\n",
+        "                          nn.Linear(512,256),\n",
+        "                          nn.ReLU(),\n",
+        "                          nn.Dropout(0.2),\n",
+        "                          nn.Linear(256,18))\n",
+        "\n",
+        "#criterion = nn.NLLLoss()\n",
+        "\n",
+        "# Training only the classifier parameters, model parameters remains unchanged\n",
+        "optimizer = optim.RMSprop(model.classifier.parameters(), lr=0.004)"
+      ],
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZDa_y9qppYw0"
+      },
+      "source": [
+        "cnn_out_sz = 18\n",
+        "img_tabular_model = CNNTabularModel(model,\n",
+        "                                  tabular_model,\n",
+        "                                  layers = [cnn_out_sz + tab_out_sz, 32],\n",
+        "                                  ps=0.2,\n",
+        "                                  out_sz=2)"
+      ],
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fh8wfT0Zq_rb",
+        "outputId": "4e996b19-30b7-496c-a94e-6f5b6e790791"
+      },
+      "source": [
+        "img_tabular_model"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CNNTabularModel(\n",
+              "  (cnn_model): XRV-DenseNet121-densenet121-res224-all\n",
+              "  (tabular_model): TabularModel(\n",
+              "    (embeds): ModuleList(\n",
+              "      (0): Embedding(3, 3)\n",
+              "      (1): Embedding(2, 2)\n",
+              "      (2): Embedding(3, 3)\n",
+              "      (3): Embedding(3, 3)\n",
+              "      (4): Embedding(2, 2)\n",
+              "      (5): Embedding(2, 2)\n",
+              "      (6): Embedding(2, 2)\n",
+              "    )\n",
+              "    (emb_drop): Dropout(p=0.0, inplace=False)\n",
+              "    (bn_cont): BatchNorm1d(6, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (layers): Sequential(\n",
+              "      (0): Linear(in_features=23, out_features=18, bias=True)\n",
+              "      (1): ReLU(inplace=True)\n",
+              "      (2): BatchNorm1d(18, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "      (3): Dropout(p=0.2, inplace=False)\n",
+              "      (4): Linear(in_features=18, out_features=18, bias=True)\n",
+              "    )\n",
               "  )\n",
-              "  (emb_drop): Dropout(p=0.0, inplace=False)\n",
-              "  (bn_cont): BatchNorm1d(6, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
               "  (layers): Sequential(\n",
-              "    (0): Linear(in_features=23, out_features=18, bias=True)\n",
-              "    (1): ReLU(inplace=True)\n",
-              "    (2): BatchNorm1d(18, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-              "    (3): Dropout(p=0.2, inplace=False)\n",
-              "    (4): Linear(in_features=18, out_features=18, bias=True)\n",
+              "    (0): BatchNorm1d(36, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (1): Dropout(p=0.2, inplace=False)\n",
+              "    (2): Linear(in_features=36, out_features=32, bias=True)\n",
+              "    (3): ReLU(inplace=True)\n",
+              "    (4): BatchNorm1d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (5): Dropout(p=0.2, inplace=False)\n",
+              "    (6): Linear(in_features=32, out_features=2, bias=True)\n",
               "  )\n",
               ")"
             ]
           },
           "metadata": {},
-          "execution_count": 88
+          "execution_count": 63
         }
       ]
     }
