--- a/chestxray_severity_detection.ipynb
+++ b/chestxray_severity_detection.ipynb
@@ -790,7 +790,7 @@
         "outputId": "08647150-e3e9-44e2-ad83-eefb95e7f0d7"
       },
       "source": [
-        "tfms = fastai.vision.transform.get_transforms(do_flip=True, \n",
+        "tfms = fastai.vision.transform.get_transforms(do_flip=False, \n",
         "                                                flip_vert=False, max_rotate=10,\n",
         "                                                max_zoom=1.1, max_lighting=0.2, \n",
         "                                                p_affine=0.85, p_lighting=0.4, \n",
